--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
 <!DOCTYPE html>
-<h1>Wurstbrot</h1>
+<html>    
+    <head>
+        <meta charset="utf-8">
+        <title>Carsten Recker CV</title>
+    </head>
+
+    <body>
+
+    </body>
+</html>
