changer were made :O

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 
     <body>
         <h1>Carsten Recker</h1>
-        <p>IT Consultant</p>
+        <p><em>IT Consultant</em></p>
     </body>
 </html>
