--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <body>
         <h1>Carsten Recker</h1>
         <p><em>IT Consultant</em></p>
-        <p>I am an IT Consultant since 2006 but loving IT since the 90s. My heart beats for the Linux world, Raspberry Pis and Arduinos. I feel most comfortable in data centers where I like to spend my vacations. At the moment I'm trying to learn more about software development and cyber security. When it's not about computers, I'm interested in fitness, cars and electronic music. </p>
+        <p>I am an IT Consultant since 2006 but loving IT since the 90s. My heart beats for Linux, home automation, Raspberry Pis, Arduinos and various other tinkering. I feel most comfortable in data centers where I like to spend my vacations. At the moment I'm trying to learn more about software development and cyber security. When it's not about computers, I'm interested in fitness, cars and electronic music. </p>
     </body>
 </html>
